build: add Docker configuration for cloud deployment